Style image slider UI

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 </head>
 <body>
     
+        <div class="slider">
+
+            <div class="slides">
+                <img class="slide" src="image1.jpg" alt="CDMX Metropolitan Cathedral">
+                <img class="slide" src="image2.jpg" alt="CDMX Independence Angel">
+                <img class="slide" src="image3.jpg" alt="CDMX Bellar Artes Palace">
+            </div>
+
+            <button class="previous" onclick="prevSlide()">&#10094</button>
+            <button class="next" onclick="nextSlide()">&#10095</button>
+
+        </div>
+
     <script src="main.js"></script>
 </body>
 </html>
